addressing warnings and minor refactoring